--- a/Windows-MacOs/Vue/index.html
+++ b/Windows-MacOs/Vue/index.html
@@ -7,6 +7,9 @@
    content="width=device-width,initial-scale=1,minimum-scale=1,
    maximum-scale=1,user-scalable=no,viewport-fit=cover"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
   <title>Reafs開発者向け</title>
   <style type="text/css">
     #v-loading-container {
